Se crea una funcion para el mazo de cartas y se añade una libreria llamada underscore.js para utilizar una funcion que baraje las cartas

--- a/02-juego-blackjack/index.html
+++ b/02-juego-blackjack/index.html
@@ -48,6 +48,7 @@
         </div>
     </div>
 
+    <script src="assets/js/underscore-min.js"></script> <!--Sirve para barajar las cartas es una libreria externa que se llama underscore.js -->
     <script src="assets/js/juego.js"></script>
 </body>
 </html>
