--- a/01-Fundamentos/index.html
+++ b/01-Fundamentos/index.html
@@ -19,6 +19,7 @@
     
 
     <!-- <script src="assets/JS/ciclos/while-do-while.js"></script> -->
-    <script src="assets/JS/ciclos/for.js"></script>
+    <!-- <script src="assets/JS/ciclos/for.js"></script> -->
+    <script src="/assets/JS/bases/arreglos2.js"></script>
 </body>
 </html>
