--- a/02-juego-blackjack/index.html
+++ b/02-juego-blackjack/index.html
@@ -16,8 +16,8 @@
     <div class="row mt-2">
         <div id="Botones" class="col text-center">
             <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
-            <button id="btnPedir" class="btn btn-primary">Pedir Carta</button>
-            <button id="btnDetener" class="btn btn-primary">Detener</button>
+            <button id="btnPedir"  disabled = "disabled" class="btn btn-primary">Pedir Carta</button>
+            <button id="btnDetener" disabled = "disabled"  class="btn btn-primary">Detener</button>
         </div>
     </div>
 
@@ -42,5 +42,11 @@
 
     <script src="assets/js/underscore-min.js"></script> <!--Sirve para barajar las cartas es una libreria externa que se llama underscore.js -->
     <script src="assets/js/juego.js"></script>
+
+    <script>
+        document.querySelector('#btnNuevo').addEventListener('click',() =>{
+            modulo.nuevoJuego();
+        })
+    </script>
 </body>
 </html>
