Clases en JavaScript

--- a/01-Fundamentos/index.html
+++ b/01-Fundamentos/index.html
@@ -18,8 +18,7 @@
 
     
 
-    <!-- <script src="assets/JS/ciclos/while-do-while.js"></script> -->
-    <!-- <script src="assets/JS/ciclos/for.js"></script> -->
-    <script src="/assets/JS/bases/arreglos2.js"></script>
+    <!-- <script src="assets/JS/classes/problemas.js"></script> -->
+    <script src="assets/JS/classes/class.js"></script>
 </body>
 </html>
