clases segunda parte

--- a/01-Fundamentos/index.html
+++ b/01-Fundamentos/index.html
@@ -19,6 +19,6 @@
     
 
     <!-- <script src="assets/JS/classes/problemas.js"></script> -->
-    <script src="assets/JS/classes/class.js"></script>
+    <script src="assets/JS/classes/constructores-multiples-protip.js"></script>
 </body>
 </html>
